# tma4280_ps6_code

./: .gitignore  CMakeLists.txt  README.md  convergence.c  convergence.plg  job.sh  matrix.c  matrix.cpp  mpi_unittest.cpp  poisson.c  poisson_speedup.c  ps6_common_library.c  ps6_common_library.h  spørsmål_til_arne_morten.txt  transposetest.cpp  unittest.cpp
include/: ps6_common_library.h
jobs/2014-03-20/: job_p12_t3.sh  job_p18_t2.sh  poisson.o381491  poisson.o381492  poisson.o381493
jobs/2014-03-28/: 3_12__1_12.sh  3_12__1_12_convergence.sh  3_12__2_6.sh  3_12__3_4.sh  3_12__4_3.sh  3_12__6_2.sh  convergence_12_1.o383514  convergence_12_1.sh  convergence_1_12.o383507  convergence_2_6.o383512  convergence_2_6.o383515  convergence_3_4.o383511  convergence_3_4.o383516  convergence_3_4.sh  convergence_4_3.o383517  convergence_6_2.o383509  convergence_6_2.o383518  convergence_6_2.sh  job_p36_t1.sh  poisson2_12_1.o383530  poisson2_12_1.sh  poisson2_1_12.o383529  poisson2_1_12.sh  poisson2_2_6.o383526  poisson2_2_6.o383531  poisson2_2_6.sh  poisson2_3_4.o383532  poisson2_3_4.sh  poisson2_4_3.o383533  poisson2_4_3.sh  poisson2_6_2.o383527  poisson2_6_2.o383534  poisson2_6_2.sh  poisson_12_1.o383520  poisson_12_1.sh  poisson_1_12.o383501  poisson_1_12.o383519  poisson_2_6.o383521  poisson_2_6.sh  poisson_3_12_12_1.o383506  (+8 more)
jobs/2014-03-28_omp_refactor/: convergence_12_1.o383571  convergence_1_12.o383570  convergence_1_12.sh  convergence_2_6.o383572  convergence_2_6.sh  convergence_3_4.o383573  convergence_4_3.o383574  convergence_4_3.sh  convergence_6_2.o383575  poisson_12_1.o383577  poisson_1_12.o383576  poisson_1_12.sh  poisson_2_6.o383578  poisson_3_4.o383579  poisson_4_3.o383580  poisson_4_3.sh  poisson_6_2.o383581  poisson_6_2.sh
jobs/2014-03-28_speedup/: poisson_speedup_1.o383662  poisson_speedup_1.sh  poisson_speedup_12.o383661  poisson_speedup_12.sh  poisson_speedup_2.o383664  poisson_speedup_2.sh  poisson_speedup_24.o383663  poisson_speedup_24.sh  poisson_speedup_36.o383665  poisson_speedup_36.sh  poisson_speedup_4.o383667  poisson_speedup_4.sh  poisson_speedup_48.o383666  poisson_speedup_48.sh  poisson_speedup_8.o383668  poisson_speedup_8.sh  poisson_speedup_96.o383669  poisson_speedup_96.sh
